# rl-2048

./: .gitignore  2048.ipynb  2048.py  EvolutionaryOptimizer.py  Game.py  Player.py  SimpleNeuralNetwork.py  Untitled.ipynb  bestnetwork-1759906233.169715.pkl  bestnetwork-1759927582.3739269.pkl  bestnetwork-1759940911.105819.pkl  full.py  jupyter.sh  main.py  pyproject.toml  recreate.ipynb  test_network.py  train.ipynb  worm.ipynb
