[project]
name = "cow-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipycanvas>=0.14.1",
    "ipyevents>=2.0.4",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "manim>=0.19.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ruff>=0.14.0",
    "torch>=2.8.0",
]
